--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -75,7 +75,7 @@ bindsym $mod+Shift+r exec "i3-msg restart"
 bindsym $mod+Shift+e exit
 
 # start the operating system
-bindsym $mod+e exec gnome-terminal -e ranger
+bindsym $mod+e exec kitty ranger
 
 # start the editor
 bindsym $mod+n exec "terminator -e 'nvim -c :terminal'"
@@ -122,6 +122,7 @@ assign [class="Telegram"]       $ws6
 assign [class="Thunar"]         $ws3
 assign [class="(?i)matplotlib"] $ws7
 assign [class="okular"]         $ws8
+assign [class="zoom"]           $ws5
 
 # ** Switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -249,9 +250,5 @@ bar {
 
 # * Floating windows
 for_window [class="(?i)blueman-manager"] floating enable
-for_window [class="Gnome-terminal" title="CALCULATOR"] move scratchpad
-for_window [class="(?i)x-terminal-emulator" title="ALSAMIXER"] floating enable
-bindsym $mod+c [title="CALCULATOR"] scratchpad show
-bindsym $mod+Shift+c exec gnome-terminal --profile=calc
 
 exec ~/.local/bin/stowed/wm_startup.sh
