--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -2,9 +2,10 @@
 /* SPDX-FileCopyrightText: 2019 Hristo Filaretov <h.filaretov@campus.tu-berlin.de> */
 /* SPDX-License-Identifier: MIT */
 rofi.modi:                           run,drun,window
-rofi.width:                          32
-rofi.lines:                          5
+rofi.width:                          16
+rofi.lines:                          3
 rofi.columns:                        1
-rofi.font:                           Fira Code 10
+rofi.font:                           Iosevka Term 11
+rofi.hide-scrollbar:                 true
 
-#include "themes/Arc.theme"
+#include "themes/nord.theme"
