--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,7 @@ cursor_shape beam
 cursor_blink_interval 0
 
 disable_ligatures always
+font_size        10.0
 font_family      Iosevka Term
 bold_font        Iosevka Term Bold
 italic_font      Iosevka Term Italic
