--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -114,15 +114,18 @@ set $ws0 "10: 0 "
 
 # ** Assign programs to ws
 #assign [class="Emacs"]          $ws2
-assign [class="Evince"]         $ws8
-assign [class="Firefox"]        $ws0
-assign [class="Nautilus"]       $ws3
-assign [class="okular"]         $ws8
-assign [class="Telegram"]       $ws6
-assign [class="Thunar"]         $ws3
-assign [class="(?i)matplotlib"] $ws7
-assign [class="okular"]         $ws8
-assign [class="zoom"]           $ws5
+assign  [class="Evince"]          $ws8
+assign  [class="Firefox"]         $ws0
+assign  [class="Nautilus"]        $ws3
+assign  [class="okular"]          $ws8
+assign  [class="Thunar"]          $ws3
+assign  [class="(?i)matplotlib"]  $ws7
+assign  [class="okular"]          $ws8
+# Comms
+assign  [class="(?i)telegram"]    $ws9
+assign  [class="(?i)zoom"]        $ws9
+assign  [class="(?i)slack"]       $ws9
+assign  [class="(?i)discord"]     $ws9
 
 # ** Switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -149,22 +152,24 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws0
 
 # ** Multi monitor
-workspace $ws1 output VGA-1
-workspace $ws2 output VGA-1
-workspace $ws3 output VGA-1
-workspace $ws4 output VGA-1
-workspace $ws5 output VGA-1
-workspace $ws6 output VGA-2
-workspace $ws7 output VGA-2
-workspace $ws8 output VGA-2
-workspace $ws9 output VGA-2
-workspace $ws0 output VGA-2
+set $m_laptop eDP-1
+set $m_big DP-2-2-1
+workspace $ws1 output $m_big
+workspace $ws2 output $m_big
+workspace $ws3 output $m_big
+workspace $ws4 output $m_big
+workspace $ws5 output $m_laptop
+workspace $ws6 output $m_laptop
+workspace $ws7 output $m_big
+workspace $ws8 output $m_big
+workspace $ws9 output $m_big
+workspace $ws0 output $m_big
 
 # ** Move workspaces to monitors
-bindsym $mod+Shift+y [class=".*"] move workspace to output VGA-1
-bindsym $mod+y move workspace to output VGA-1
-bindsym $mod+Shift+u [class=".*"] move workspace to output VGA-2
-bindsym $mod+u move workspace to output VGA-2
+bindsym $mod+Shift+y [class=".*"] move workspace to output $m_big
+bindsym $mod+y move workspace to output $m_big
+bindsym $mod+Shift+u [class=".*"] move workspace to output $m_laptop
+bindsym $mod+u move workspace to output $m_laptop
 
 # ** Resize window mode
 bindsym $mod+r mode "resize"
